fix scrollbar glitch on windows chrome

--- a/src/style.css
+++ b/src/style.css
@@ -25,6 +25,7 @@ body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 body h1,
